--- a/css/style.css
+++ b/css/style.css
@@ -429,6 +429,30 @@ p {
   letter-spacing: 1px;
   color: #37476c;
 }
+.hvorfor-storytelling a {
+  background-color: #d47b28;
+  border-radius: 50px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  text-decoration: none;
+  text-align: center;
+  padding: 13.5px 111px;
+  color: black;
+  font-family: "roboto", sans-serif;
+  font-size: 20px;
+  font-weight: 700;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+.hvorfor-storytelling ul {
+  padding: 4em 0;
+}
+
+.case {
+  background-color: #efeae1;
+  margin: 4em 0;
+  padding: 4em 6em;
+  border: 2 solid #efeae1;
+}
 
 .storytekstbillede {
   display: flex;
