Hvid knap-tekstfarve

--- a/css/_partial.scss
+++ b/css/_partial.scss
@@ -15,7 +15,7 @@ $font: "roboto", sans-serif;
     text-decoration: none;
     text-align: center;
     padding: 13.5px 111px;
-    color: black;
+    color: #fff;
     font-family: $font;
     font-size: 20px;
     font-weight: 700;
