Ændring til sort tekst farve på btn:hover

--- a/css/_partial.scss
+++ b/css/_partial.scss
@@ -28,6 +28,7 @@ $font: "roboto", sans-serif;
         border: 3px solid $secondary-color;
         transition: 0.3s ease-in-out;
         cursor: pointer;
+        color: black;
 }
 
 @mixin website-box{
