--- a/css/style.css
+++ b/css/style.css
@@ -712,6 +712,7 @@ main input[type=submit]:hover {
   border: 3px solid #AD5715;
   transition: 0.3s ease-in-out;
   cursor: pointer;
+  color: black;
 }
 
 .faq-bunden {
