--- a/css/style.scss
+++ b/css/style.scss
@@ -44,15 +44,46 @@ p{
     line-height: 26px;
 }
 
+.fed{
+    font-weight: 800;
+    padding-bottom: 80px;
+}
 
-/*********--Styling af Branding proces--***********/
+/***********---Fælles styling - heor-område---************/
 
-/*Branding - hero område */
+/*BG-billede - forside, om os og øvringe*/
+    /*BG-Forside*/
+        .BGforside{
+            background-image: url('../img/BGforside.png');
+            background-size: cover;
+            background-position: top;
+            background-repeat: no-repeat;
+            width: 100%;
+        }
 
+    /*BG-om os*/
+        .BGomos{
+            background-image: url('../img/BGomos.png');
+            background-size: cover;
+            background-position: top;
+            background-repeat: no-repeat;
+            width: 100%;
+        }
+
+    /*BG-øvringe*/
+        .BGandre{
+            background-image: url('../img/Brandingbaggrund.png');
+            background-size: cover;
+            background-position: top;
+            background-repeat: no-repeat;
+            width: 100%;
+        }
+
+/*Tekst og illustration*/
 .hero-container{
     display: flex;
     width: 100%;
-    padding: 150px 100px 0 100px;
+    padding: 150px 150px 0 150px;
 } 
 
 .hero-tekst h1{
@@ -66,7 +97,7 @@ p{
     margin-right: 200px;
 }
 
-.brandingimgtop{
+.imgtop{
     width: 150%;
     margin: 0;
 }
@@ -82,11 +113,14 @@ p{
  
 .hero-tekst a{
     @include partial.btn;
+
+        &:hover{
+            @include partial.btn-hover;
+        }
  }
 
- /* Chevron */
-
- .chevron-container{
+/*Cheveron*/
+.chevron-container{
     text-align: center;
 
         img{
@@ -95,27 +129,59 @@ p{
  }
 
 
+/*Chat funktion*/
+.chatfunktion{
+    padding: 20px;
+    position: fixed;
+    top: 90%;
+    left: 93%;
+}
 
-/* Branding hovedområde */
-
-.BGbillede-branding{
-    background-image: url('../img/Brandingbaggrund.png');
-    background-size: cover;
-    background-position: top;
-    background-repeat: no-repeat;
-    width: 100%;
- }
-
- .brodkrommebrand{
+/*Brødkrumme*/
+.brodkromme{
     writing-mode: vertical-lr;
     text-orientation: mixed;
     font-size: 36px;
     position: absolute;
-    height: 360px;
+    height: 160px;
     right: 10%;
     top: 100%;
  }
 
+ /*Pil op (i bunden)*/
+ 
+ .pilop{
+    display: flex;
+    justify-content: right;
+    padding: 100px 20px 20px 0;
+
+        img{
+            width: 35px;
+        }
+}
+
+ /*Knap*/
+.knap-container{
+    display: flex;
+    justify-content: center;
+    margin-top: 25px
+}
+
+ .knap{
+    @include partial.btn;
+    
+        &:hover{
+            @include partial.btn-hover;
+        }
+}
+
+/*********-- Styling af Forsiden --*********/
+
+
+
+/*********--Styling af Branding proces--***********/
+
+/* Branding hovedområde */
 .branding-container-venstre{
     display: grid;
     width: 75%;
@@ -192,55 +258,11 @@ p{
     text-align: center;
 }
 
-/*pil op*/
-
-.pilop{
-    display: flex;
-    justify-content: right;
-    padding: 100px 20px 20px 0;
-}
-
-.pilopimg{
-    width: 35px;
-}
-
-/*Kontaktknap*/
-
-.knap-container{
-    display: flex;
-    justify-content: center;
-    padding-top: 80px;
-}
-
-.kontakt{
-    @include partial.btn;
-}
-
 
 
 /**********--Styling af Ydelser--***********/
 
-.BGbillede-ydelser{
-    background-image: url('../img/TopBG.png');
-    background-size: contain;
-    background-position: top;
-    background-repeat: no-repeat;
-    width: 100%;
- }
-
- .brodkromme{
-    writing-mode: vertical-lr;
-    text-orientation: mixed;
-    font-size: 36px;
-    position: absolute;
-    height: 160px;
-    right: 10%;
-    top: 100%;
- }
-
 /*Test på ny kodning*/
-
-/*Hero område*/ 
 
  /*Hovedindhold*/
 
@@ -395,14 +417,6 @@ p{
 
  /********--Styling af Storytelling--*******/
 
- .BGbillede-storytelling{
-    background-image: url('../img/TopBG.png');
-    background-size: contain;
-    background-position: top;
-    background-repeat: no-repeat;
-    width: 100%;
- }
-
 /* Story tekst billede */
 
 .hvad-er-storytelling{
@@ -487,47 +501,7 @@ p{
     text-align: center;
 }
 
-/*Styling af Kontakt siden*/
-.BGtop{
-    background-image: url("../img/BGtop.png");
-    background-size: contain;
-    background-position: top;
-    background-repeat: no-repeat;
-    height: 100%;
-}
-
-.kontakt-hero-container{
-    display: flex;
-    width: 100%;
-    padding: 150px 100px 0 100px;
-}
-
-.kontakt-hero-tekst h1{
-    padding-top: 50px;
-    padding-bottom: 80px;
-}
-
-.kontakt-hero-tekst a{
-    text-decoration: none;
-    color: partial.$text-color;
-}
-
-.kontakt-hero-img{
-    width: 100%;
-    display: flex;
-    justify-content: right;
-}
-
-.kontakt-hero-img img{
-    object-fit: contain;
-}
-
-.chatfunktion{
-    padding: 20px;
-    position: fixed;
-    top: 90%;
-    left: 93%;
-}
+/**********---Styling af Kontakt siden---*************/
 
 .kontaktform{
     display: flex;
@@ -597,13 +571,9 @@ main input[type=submit]{
     align-items: end;
 }
 
-.pilop{
-    width: 35px;
-}
+/************---Styling af FAQ siden---***************/
 
-/*Styling af FAQ siden*/
 /* dropdown menu */
-
 .dropdown-box{
     width: 750px;
     height: 60px;
@@ -662,7 +632,8 @@ main input[type=submit]{
     opacity: 1;
     visibility: visible;
 }
-  
+ 
+/*informations kasser*/
 .faq-box1{
     height: 475px;
     background-color: partial.$bg-color;
@@ -676,14 +647,6 @@ main input[type=submit]{
     padding-left: 100px;
     padding-right: 100px;
     padding-top: 75px;
-}
-
-.knap{
-    @include partial.btn;
-    
-        &:hover{
-            @include partial.btn-hover;
-        }
 }
 
 .faq-bunden{
