--- a/css/style.scss
+++ b/css/style.scss
@@ -70,10 +70,19 @@ p{
             width: 100%;
         }
 
-    /*BG-øvringe*/
-        .BGandre{
+    /*BG-Branding*/
+        .BGbranding{
             background-image: url('../img/Brandingbaggrund.png');
             background-size: cover;
+            background-position: top;
+            background-repeat: no-repeat;
+            width: 100%;
+        }
+
+    /*BG-øvringe*/
+        .BGandre{
+            background-image: url('../img/BGtop.png');
+            background-size: contain;
             background-position: top;
             background-repeat: no-repeat;
             width: 100%;
@@ -141,10 +150,10 @@ p{
 .brodkromme{
     writing-mode: vertical-lr;
     text-orientation: mixed;
-    font-size: 36px;
+    font-size: 26px;
     position: absolute;
-    height: 160px;
-    right: 10%;
+    height: 260px;
+    right: 30%;
     top: 100%;
  }
 
@@ -502,6 +511,25 @@ p{
 }
 
 /**********---Styling af Kontakt siden---*************/
+.text p{
+    font-weight: 800;
+}
+
+.text a{
+    color: partial.$text-color;
+    background-color: transparent;
+    box-shadow: none;
+    padding: 0;
+    text-transform: none;
+    font-weight: 500;
+    padding-left: 15px;
+
+        &:hover{
+            border: none;
+            font-weight: 800;
+        }
+}
+
 
 .kontaktform{
     display: flex;
@@ -622,10 +650,16 @@ main input[type=submit]{
 .faq-dropdown-menu a{
     text-decoration: none;
     color: #37476C;
+    background-color: partial.$bg-color;
+    border-radius: 5px;
+    box-shadow: none;
+    line-height: 2em;
 }
 
 .faq-dropdown-menu a:hover{
-    background-color: rgba(212, 123, 40, 0.212);
+    background-color: rgba(212, 123, 40, 0.11);
+    border: none;
+    border-radius: 5px;
 }
 
 .faq-dropdown:hover .faq-dropdown-menu {
