css global tilrettet med nye farver

--- a/css/global.css
+++ b/css/global.css
@@ -18,16 +18,6 @@ h5{
     line-height: 30px;
 }
 
-/* Baggrundsbillede */
-
-.BGbillede{
-    background-image: url("../img/BGforside.png");
-    background-size: contain;
-    background-position: top;
-    background-repeat: no-repeat;
-    height: 100%;
-}
-
 /*Header*/
 
 .headerlogo{
@@ -86,7 +76,7 @@ h5{
     text-orientation: mixed;
     font-family: hobeaux, sans-serif;
     font-size: 60px;
-    color: #D47B28;
+    color: #AD5715;
     font-weight: 700;
 }
 
@@ -104,7 +94,7 @@ h5{
     transition: opacity 0.5s ease, visibility 0.5s ease;
     position: absolute;
     background-color: rgb(255, 255, 255);
-    border: 2px solid #D47B28;
+    border: 2px solid #AD5715;
     border-radius: 5px;
     font-family: "roboto", sans-serif;
     font-size: 20px;
@@ -173,7 +163,7 @@ h5{
     grid-template-columns: 100px 180px 1fr 200px 100px;
     width: 100%;
     height: 420px;
-    background-color: #EFEAE1;
+    background-color: #F7F1E6;
 }
 
 
@@ -232,7 +222,7 @@ footer a:hover{
 }
 
 footer input[type=submit]{
-    background-color: #D47B28;
+    background-color: #AD5715;
     width: 116px;
     height: 32px;
     border-radius: 50px;
@@ -244,8 +234,8 @@ footer input[type=submit]{
 }
 
 footer input[type=submit]:hover{
-    background-color: #EFEAE1;
-    border: 3px solid #D47B28;
+    background-color: #F7F1E6;
+    border: 3px solid #AD5715;
     transition: 0.3s ease-in-out;
     cursor: pointer;
 }
@@ -274,7 +264,7 @@ footer input[type=email]{
 
 /*copyright*/
 .copy{
-    background-color: #EFEAE1;
+    background-color: #F7F1E6;
     display: flex;
     justify-content: center;
     align-items: center;
