--- a/css/style.scss
+++ b/css/style.scss
@@ -188,6 +188,31 @@ p{
 
 
 
+/*Instagram karrusel*/
+.karrusel-box{
+    height: 688px;
+    width: auto;
+    background-color: partial.$primary-color;
+    margin: 100px 50px 100px 50px;
+}
+
+.karrusel-box h3{
+    text-align: center;
+    padding: 80px;
+}
+
+.karrusel{
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+    display: flex;
+  }
+  
+  .slider{
+    padding: 0 10px 0 10px;
+  }
+  
+
 /*********--Styling af Branding proces--***********/
 
 /* Branding hovedområde */
