--- a/css/style.css
+++ b/css/style.css
@@ -211,12 +211,66 @@ p {
 }
 
 /*********-- Styling af Forsiden --*********/
+/*hover hero-billede*/
+.illforside:hover {
+  content: url(../img/illustration\ -\ forside3.png);
+}
+
+/*Branding video*/
+.brandingvideo {
+  text-align: center;
+}
+.brandingvideo h4 {
+  padding-top: 100px;
+  padding-bottom: 70px;
+}
+
+/*Intro/informationstekst*/
+.intro {
+  background-image: url(../img/logo\ -\ ikon\ baggrund.png);
+  background-size: 60%;
+  background-position: right;
+  background-repeat: no-repeat;
+  margin: 100px 0 100px 100px;
+}
+.intro h2, .intro h3, .intro p {
+  margin-right: 40%;
+}
+.intro h3 {
+  margin-top: 40px;
+}
+.intro p {
+  margin: 40px 40% 0 0;
+}
+.intro .orange, .intro .fed-orange {
+  color: #AD5715;
+}
+.intro .fed-orange {
+  font-size: 26px;
+  font-weight: 800;
+}
+.intro li {
+  color: #37476c;
+  font-family: "roboto", sans-serif;
+  margin-left: 40px;
+  font-size: 22px;
+}
+
 /*tekst og billede sektioner*/
-.text-img-sektion {
+.text-img-section {
+  height: 650px;
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   background-color: #F7F1E6;
-  height: 650px;
+  text-align: center;
+  margin-bottom: 100px;
+  padding: auto;
+}
+.text-img-section h2 {
+  padding-top: 140px;
+}
+.text-img-section .vi-tilbyder {
+  padding-top: 10px;
 }
 
 .txt {
@@ -225,6 +279,29 @@ p {
 
 .foto {
   grid-column: 4/6;
+}
+.foto img {
+  height: 650px;
+  width: 500px;
+}
+
+.txt2 {
+  grid-column: 3/6;
+}
+
+.foto2 {
+  grid-column: 1/3;
+}
+.foto2 img {
+  height: 650px;
+  width: 500px;
+}
+
+.logo-foto {
+  grid-column: 4/6;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /*Instagram karrusel*/
