billede tilføjet, footer knap redigeret

--- a/css/style.css
+++ b/css/style.css
@@ -640,6 +640,7 @@ p {
   text-align: center;
 }
 
+/**********--- Styling af Om Sotry Media siden---*******/
 /**********---Styling af Kontakt siden---*************/
 .text p {
   font-weight: 800;
