--- a/css/style.scss
+++ b/css/style.scss
@@ -637,6 +637,11 @@ p{
     text-align: center;
 }
 
+
+/**********--- Styling af Om Sotry Media siden---*******/
+
+
+
 /**********---Styling af Kontakt siden---*************/
 .text p{
     font-weight: 800;
