--- a/css/global.css
+++ b/css/global.css
@@ -228,7 +228,7 @@ footer input[type=submit]{
     border-radius: 50px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     border: none;
-    color: black;
+    color: rgb(255, 255, 255);
     font-weight: bolder;
     font-family: "roboto", sans-serif;
 }
