--- a/css/global.css
+++ b/css/global.css
@@ -237,6 +237,7 @@ footer input[type=submit]:hover{
     background-color: #F7F1E6;
     border: 3px solid #AD5715;
     transition: 0.3s ease-in-out;
+    color: black;
     cursor: pointer;
 }
 
