--- a/css/style.scss
+++ b/css/style.scss
@@ -92,7 +92,7 @@ p{
 .hero-container{
     display: flex;
     width: 100%;
-    padding: 150px 150px 0 150px;
+    padding: 8em 9em 0 9em;
 } 
 
 .hero-tekst h1{
@@ -133,7 +133,7 @@ p{
     text-align: center;
 
         img{
-            padding: 100px;
+            padding: 6em;
         }
  }
 
