--- a/css/style.scss
+++ b/css/style.scss
@@ -389,19 +389,24 @@ p{
         p{
             padding-bottom: 1.2em;
         }
+
+        a{
+            border: 1px solid black;
+            padding: 0.5em 1.5em;
+            border-radius: 50px;
+            color: black;
+            text-transform: uppercase;
+            font-size: 20px;
+            text-decoration: none;
+
+            &:hover{
+                cursor: pointer;
+                transform: scale(3);
+                transition: 0.3s ease-in-out;
+                  }
+        }
  }
 
-
-
- .kontaktvisuel{
-    border: 1px solid black;
-    padding: 7px 20px;
-    border-radius: 50px;
-    color: black;
-    text-transform: uppercase;
-    font-size: 20px;
-    text-decoration: none;
- }
 
  /* Tekst til hjemmeside */
 
@@ -409,7 +414,7 @@ p{
     display: flex;
     flex-direction: column;
     width: 100%;
-    padding: 0 200px 150px 200px;
+    padding: 0 8em 3em 8em;
  }
 
 /*Hjemmesidekasser*/
@@ -419,7 +424,7 @@ p{
     width: 100%;
     height: 62.2vh;
     position: absolute;
-    z-index: 1;
+    z-index: -2;
  }
 
  .hjemmesidekasse-container{
@@ -428,19 +433,29 @@ p{
     gap: 1%;
     padding: 0 1%;
     position: relative;
-    z-index: 2;
+    z-index: -1;
     margin-top: 20px;
-    margin-bottom: 160px;
- }
+    margin-bottom: 5em;
 
- .hjemmesidekasse {
-    background-color: partial.$primary-color;
-    height: 900px;
-    padding: 6%;
+        section{
+            background-color: partial.$primary-color;
+            height: 900px;
+            padding: 6%;
+                }
  }
 
  .centrerhjemmeside{
     text-align: center;
+
+    h2{
+        padding: 0;
+    }
+
+    p{
+        opacity: 50%;
+        letter-spacing: 5%;
+        padding-bottom: 1.5em;
+     }
  }
 
  .linjeydelser{
@@ -466,15 +481,15 @@ p{
  .specifikke{
     display: flex;
     justify-content: space-around;
-    padding: 80px 100px;
- }
+    padding: 5em 6em;
 
- .specifiktekst{
-    padding-right: 50px;
+        article{
+            padding-right: 50px;
+        }
  }
 
  .specafstand{
-    padding-bottom: 50px;
+    padding-bottom: 1.5em;
  }
 
 
