--- a/css/style.css
+++ b/css/style.css
@@ -346,7 +346,7 @@ p {
   display: flex;
   margin-top: 5em;
   margin-bottom: 7em;
-  height: 100vh;
+  height: 95vh;
 }
 .vispakker-container .vis-et {
   background-color: #F7F1E6;
@@ -492,6 +492,15 @@ p {
   border-left: none;
   margin-bottom: 145px;
 }
+.branding-container-venstre section {
+  grid-area: 1/1/2 2;
+  background-color: rgba(239, 234, 225, 0.6);
+  padding-left: 6em;
+  padding-right: 6em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
 
 .branding-container-hojre {
   display: grid;
@@ -505,22 +514,11 @@ p {
   border-radius: 50px 0 0 50px;
   margin-bottom: 145px;
 }
-
-.branding-tekst-bokse-venstre {
-  grid-area: 1/1/2 2;
-  background-color: rgba(239, 234, 225, 0.6);
-  padding-left: 100px;
-  padding-right: 100px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.branding-tekst-bokse-hojre {
+.branding-container-hojre section {
   grid-area: 1/2/2/3;
   background-color: rgba(239, 234, 225, 0.6);
-  padding-left: 100px;
-  padding-right: 100px;
+  padding-left: 6em;
+  padding-right: 6em;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -531,14 +529,7 @@ p {
   display: flex;
   align-content: center;
 }
-
-.branding-img-bokse-hojre {
-  grid-area: 1/1/2/2;
-  display: flex;
-  align-content: center;
-}
-
-.branding-kasseimg-venstre {
+.branding-img-bokse-venstre img {
   max-width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
@@ -546,7 +537,12 @@ p {
   border-radius: 0 45px 45px 0;
 }
 
-.branding-kasseimg-hojre {
+.branding-img-bokse-hojre {
+  grid-area: 1/1/2/2;
+  display: flex;
+  align-content: center;
+}
+.branding-img-bokse-hojre img {
   max-width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
